# singularity

./: .gitignore  LICENCE  README.md  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  db.rs  lib.rs  messages.rs  room_updates.rs  rooms.rs  storage.rs
src-tauri/src/assets/image/: mod.rs
src-tauri/src/auth/: commands.rs  mod.rs  persistence.rs  types.rs  workers.rs
src-tauri/src/messages/: commands.rs  helpers.rs  mod.rs  persistence.rs  streaming.rs  types.rs  workers.rs
src-tauri/src/messages/commands/: avatar.rs  chat.rs  clipboard.rs  emoji.rs  mod.rs  reactions.rs  send.rs
src-tauri/src/messages/emoji/: category.rs  constants.rs  loader.rs  mod.rs  pack_parsing.rs
src-tauri/src/messages/media/: mod.rs  url_parsing.rs
src-tauri/src/messages/reactions/: mod.rs
src-tauri/src/messages/receive/: fetch.rs  mod.rs  parsing.rs  receiver.rs  stream.rs
src-tauri/src/messages/send/: mod.rs
src-tauri/src/messages/send/formatting/: emoji_html.rs  mod.rs
src-tauri/src/messages/types/: domain.rs  mod.rs  requests.rs  responses.rs
src-tauri/src/protocol/: config.rs  endpoints.rs  event_paths.rs  event_types.rs  events_schema.rs  mod.rs  storage_keys.rs  sync.rs  validation.rs
src-tauri/src/rooms/: commands.rs  mod.rs  persistence.rs  types.rs  workers.rs
src-tauri/src/rooms/commands/: browse.rs  image.rs  join.rs  leave.rs  mod.rs  navigation.rs  preview.rs  space.rs  updates.rs
src-tauri/src/settings/: commands.rs  mod.rs  types.rs
src-tauri/src/verification/: commands.rs  mod.rs  types.rs
src/lib/: errors.ts  (+1 more)
(+102 files in other folders)
