[package]
name = "singularity"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "singularity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
matrix-sdk = { version = "0.16.0", default-features = false, features = ["rustls-tls", "sso-login", "e2e-encryption", "bundled-sqlite"] }
url = "2"
tokio = { version = "1", features = ["sync", "time"] }
futures-util = "0.3"
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
rmp-serde = "1"
markup = "0.15"

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled-sqlcipher-vendored-openssl"] }

[target.'cfg(not(windows))'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled-sqlcipher"] }

